fix dd-toggle being too wide

--- a/oceannavigator/frontend/src/stylesheets/components/_DatasetDropdown.scss
+++ b/oceannavigator/frontend/src/stylesheets/components/_DatasetDropdown.scss
@@ -16,7 +16,7 @@
 
   .dd-toggle {
     display: flex;
-    width: 300px;
+    width: 100%;
     font-size: 10pt;
     font-weight: 400;
     line-height: 1.5;
